--- a/src/App.css
+++ b/src/App.css
@@ -7,24 +7,23 @@
 }
 
 .clickCol {
-  flex: 67%;
+  flex: 65%;
   width: 100%;
   height: 100%;
+  align-content: center;
 }
 
 .sidebar {
   background-color: #ffda76;
 
   border-left: solid 1px brown;
-  flex: 33%;
+  flex: 35%;
   width: 100%;
   height: 100%;
 }
 
 .clickImg {
-  width: 40vh;
-  height: 40vh;
-
-  text-align: center;
-  margin-top: 25vh;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
 }
