--- a/src/css/App.css
+++ b/src/css/App.css
@@ -7,14 +7,17 @@
 }
 
 .clickCol {
+  background-image: url("./wallpaper.jpg");
+
   flex: 65%;
   width: 100%;
   height: 100%;
-  align-content: center;
+
+  position: static;
 }
 
 .sidebar {
-  background-color: #ffda76;
+  background-image: url("./wallpaperSidebar.jpg");
 
   border-left: solid 1px brown;
   flex: 35%;
