change the selectability

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -4,6 +4,10 @@
   height: 100vh;
   max-height: 100vh;
   text-align: center;
+
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 .clickCol {
