--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,9 +1,13 @@
+:root {
+  --cursor-custom: default;
+}
 .gameBoard {
   display: flex;
   width: 100%;
   height: 100vh;
   max-height: 100vh;
   text-align: center;
+  cursor: var(--cursor-custom);
 }
 
 .clickCol {
@@ -33,4 +37,7 @@
   margin-left: auto;
   margin-right: auto;
   width: 40%;
+}
+.cheats {
+  cursor: url("/mouseSimple.png"), auto;
 }
