--- a/src/css/ItemCell.css
+++ b/src/css/ItemCell.css
@@ -21,13 +21,17 @@
   bottom: 0px;
   z-index: 100;
 }
+.buttonCell:hover {
+  cursor: var(--cursor-custom-hover);
+}
+.buttonCell:active {
+  cursor: var(--cursor-custom-click);
+}
 
 .itemImage {
-  flex: 10%;
   height: 10vh;
 }
 .itemInfo {
-  flex: 52%;
   text-align: left;
   margin-left: 5%;
 }
@@ -41,21 +45,39 @@
 }
 .itemLevel {
   font-size: 25px;
-  flex: 20%;
+}
+.itemStatus {
+  height: 100%;
+  text-align: center;
 }
 
-.flex-10 {
+.f-10 {
   flex: 100%;
 }
-.flex-8 {
+.f-9 {
+  flex: 90%;
+}
+.f-8 {
   flex: 80%;
 }
-.flex-6 {
+.f-7 {
+  flex: 70%;
+}
+.f-6 {
   flex: 60%;
 }
-.flex-4 {
+.f-5 {
+  flex: 50%;
+}
+.f-4 {
   flex: 40%;
 }
-.flex-2 {
+.f-3 {
+  flex: 30%;
+}
+.f-2 {
   flex: 20%;
+}
+.f-1 {
+  flex: 10%;
 }
