--- a/src/css/ItemCell.css
+++ b/src/css/ItemCell.css
@@ -2,8 +2,8 @@
   display: flex;
   position: relative;
 
-  height: 5%;
-  max-height: 5%;
+  height: 80px;
+  max-height: 80px;
   border-radius: 0%;
   padding: 0px;
   width: 100%;
