--- a/src/modal.css
+++ b/src/modal.css
@@ -10,7 +10,10 @@ body.active-modal {
   font-size: 18px;
 }
 
-.modal,
+.modal {
+  visibility: hidden;
+}
+,
 .overlay {
   width: 100vw;
   height: 100vh;
